@@ -1,3 +1,7 @@
+2012-07-31  Norbert Preining  <preining@logic.at>
+
+	* updmap.pl (main): fix quoting and var expansion on Windows.
+
 2012-07-30  Norbert Preining  <preining@logic.at>
 
 	* updmap.pl (main): support for multiple entry TEXMFLOCAL.
